# aoc

./: Cargo.toml
benches/: aoc_benches.rs
src/: aoc2022.rs  lib.rs  main.rs
src/aoc2022/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/utils/: utils.rs
